ocp4/f5-nodeport-deployment.yaml
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: f5-server
    namespace: kube-system
  spec:
    replicas: 1
    template:
      metadata:
        name: k8s-bigip-ctlr
        labels:
          app: k8s-bigip-ctlr
      spec:
        # Name of the Service Account bound to a Cluster Role with the required
        # permissions
        serviceAccountName: bigip-ctlr
        containers:
          - name: k8s-bigip-ctlr
            image: f5networks/k8s-bigip-ctlr:latest
            command: ["/app/bin/k8s-bigip-ctlr"]
            args: [
              "--bigip-username=$(BIGIP_USERNAME)",
              "--bigip-password=$(BIGIP_PASSWORD)",
              # Replace with the IP address or hostname of your BIG-IP device
              "--bigip-url=10.192.74.189",
              # Replace with the name of the BIG-IP partition you want to manage
              "--bigip-partition=openshift",
              # Replace with service type - cluster or nodeport
              "--pool-member-type=nodeport",
              # Replace with the path to the BIG-IP VXLAN connected to the
              # OpenShift HostSubnet
              # set manage-routes TRUE to manage routes
              "--manage-routes=true",
              # set manage-configmaps TRUE to manage config maps
              # set the namespace for CIS to watch.
              "--namespace=default",
              "--route-vserver-addr=10.1.1.4",
              "--route-http-vserver=okd_http_vs",
              "--route-https-vserver=okd_https_vs",
              # Logging level
              "--log-level=DEBUG",
              # AS3 override functionality, Refer docs for more info
              # Self-signed cert
              "--insecure=true"
              ]
        imagePullSecrets:
          - name: f5-docker-images
          - name: bigip-login
